cmake_minimum_required(VERSION 3.24)
project(SP C)

set(CMAKE_C_STANDARD 23)

#add_executable(SP HW1/main.c HW1/libcoro.c)
add_executable(HW2 HW2/main.c)
#add_executable(HW3 HW3/main.c HW3/userfs.c)
#add_executable(HW4 HW4/main.c HW4/thread_pool.c)
#add_executable(test3 HW3/test.c HW3/userfs.c)
#add_executable(test4 HW4/test.c HW4/thread_pool.c)
